Fixing the paths

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <!-- saved from url=(0080)http://eur-lex.europa.eu/legal-content/NL/TXT/HTML/?uri=CELEX:32016R0679&from=NL -->
 <!-- CONVEX # converter_version:6.7.1 # generated_on:20160504-0045 -->
 <head>
-  <title>GDPR Excerpt</title>
+  <title>GDPR Inhoudsopgave</title>
 
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
