--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           </a>
         </div>
         <div class="column-1 inset text-center">
-          <a href="views/chapters/intro.html">
+          <a href="/gdpr/views/chapters/intro.html">
             <span class="lnr lnr-chevron-right"></span>
           </a>
         </div>
