--- a/index.html
+++ b/index.html
@@ -16,8 +16,19 @@
   <link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css">
   <script src="https://www.w3schools.com/lib/w3data.js"></script>
   <link type="text/css" rel="stylesheet" href="assets/gdpr.css">
-</head>
 
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-39039445-7', 'auto');
+    ga('send', 'pageview');
+
+  </script>
+
+</head>
 <body>
   <progress value="0" id="progressBar">
     <div class="progress-container">
